--- a/rails-container/.devcontainer/compose.yml
+++ b/rails-container/.devcontainer/compose.yml
@@ -3,25 +3,10 @@ services:
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
-    command: bundle exec rails s -b 0.0.0.0
     volumes:
       - .:/workspace
     ports:
       - "4000:4000"
-    depends_on:
-      - db
     environment:
       RAILS_ENV: development
-
-  db:
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: database
-      MYSQL_USER: mysql
-      MYSQL_PASSWORD: password
-    volumes:
-      - ./tmp/db:/var/lib/mysql
-
-volumes:
-  mysqldata:
+    command: bundle e rails s -b 0.0.0.0
